# execution-specs

./: .gitignore  .markdownlint.yaml  CONTRIBUTING.md  EIP_AUTHORS_MANUAL.md  LICENSE.md  README.md  RELEASING.md  SECURITY.md  _config.yml  mkdocs.yml  pyproject.toml  test-docs.yaml  tox.ini  vulture_whitelist.py  whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: eip-tracker.md  eip-tracker.yaml
.github/actions/build-benchmark-genesis/: action.yaml
.github/actions/build-evmone/: action.yaml
.github/actions/build-fixtures/: action.yaml
.github/actions/get-changed-files/: action.yaml
.github/actions/setup-env/: action.yaml
.github/actions/start-hive-dev/: action.yaml
.github/configs/: evm-impl.yaml  feature.yaml
.github/configs/hive/: latest.yaml  master.yaml
.github/workflows/: artifact_benchmark_fast.yaml  fixture_feature_release.yaml  fixture_full_release.yaml  gh-pages.yaml  hive-consume.yaml  release_fixture_full.yaml  test-docs.yaml  test.yaml
docs/: CHANGELOG.md  changelog_section_template.md  navigation.md
docs/dev/: deps_and_packaging.md  docs.md  interactive_usage.md
docs/filling_tests/: debugging_t8n_tools.md
docs/getting_started/: code_standards.md  code_standards_details.md  installation.md  installation_troubleshooting.md
docs/running_tests/consume/: exceptions.md
docs/running_tests/execute/: hive.md  index.md  remote.md
docs/running_tests/test_formats/: blockchain_test.md  blockchain_test_engine.md  blockchain_test_sync.md  exceptions.md  state_test.md  transaction_test.md
docs/scripts/: copy_repo_docs_to_mkdocs.py  gen_test_case_reference.py  generate_fill_help.py
docs/writing_tests/: eip_checklist.md  exception_tests.md  test_markers.md  writing_a_new_test.md
docs/writing_tests/checklist_templates/: eip_testing_checklist_template.md
docs/writing_tests/tutorials/: state_transition.md
scripts/: download_geth_linux.py
src/ethereum/: __init__.py  exceptions.py  fork_criteria.py  genesis.py  trace.py
src/ethereum/arrow_glacier/: fork_types.py  state.py
src/ethereum/berlin/: fork.py
src/ethereum/byzantium/: fork.py  fork_types.py  state.py
src/ethereum/cancun/: fork.py  fork_types.py  state.py
src/ethereum/crypto/: blake2.py  elliptic_curve.py  hash.py  kzg.py
src/ethereum/frontier/: fork.py
src/ethereum/gray_glacier/: fork.py
src/ethereum/homestead/: fork.py
src/ethereum/istanbul/: fork.py
src/ethereum/muir_glacier/: fork.py
src/ethereum/osaka/: fork.py
src/ethereum/paris/: fork.py  state.py
src/ethereum/prague/: fork.py
src/ethereum/shanghai/: fork.py
src/ethereum/spurious_dragon/: fork.py
src/ethereum/tangerine_whistle/: state.py
src/ethereum/utils/: byte.py  hexadecimal.py  numeric.py
src/ethereum_optimized/: __init__.py  fork.py  state_db.py  utils.py
src/ethereum_spec_tools/: __init__.py  docc.py  forks.py  new_fork.py  patch_tool.py  sync.py
src/ethereum_spec_tools/evm_tools/: __init__.py  __main__.py  daemon.py  utils.py
src/ethereum_spec_tools/lint/: __init__.py  __main__.py
src/ethereum_spec_tools/new_fork/: __init__.py  builder.py  cli.py
src/ethereum_spec_tools/whitelist/: __init__.py  __main__.py
tests/: __init__.py
tests/amsterdam/eip7928_block_level_access_lists/: test_block_access_lists.py  test_block_access_lists_eip7702.py  test_block_access_lists_invalid.py  test_block_access_lists_opcodes.py
tests/benchmark/: conftest.py  helpers.py  test_worst_blocks.py  test_worst_bytecode.py  test_worst_compute.py  test_worst_memory.py  test_worst_opcode.py  test_worst_stateful_opcodes.py
tests/benchmark/compute/: helpers.py
tests/benchmark/stateful/: conftest.py
tests/berlin/eip2929_gas_cost_increases/: test_call.py  test_precompile_warming.py
tests/berlin/eip2930_access_list/: spec.py  test_acl.py  test_tx_intrinsic_gas.py  test_tx_type.py
tests/byzantium/eip196_ec_add_mul/: __init__.py  test_gas.py
tests/byzantium/eip197_ec_pairing/: __init__.py  test_gas.py
tests/byzantium/eip198_modexp_precompile/: helpers.py  test_modexp.py
tests/cancun/eip1153_tstore/: __init__.py  spec.py  test_basic_tload.py  test_tload_calls.py  test_tload_reentrancy.py  test_tstorage.py  test_tstorage_clear_after_tx.py  test_tstorage_create_contexts.py  test_tstorage_execution_contexts.py  test_tstorage_reentrancy_contexts.py  test_tstorage_selfdestruct.py  test_tstore_reentrancy.py
tests/cancun/eip4788_beacon_root/: conftest.py  spec.py  test_beacon_root_contract.py
tests/cancun/eip4844_blobs/: conftest.py  spec.py  test_blob_txs.py  test_blob_txs_full.py  test_blobhash_opcode.py  test_blobhash_opcode_contexts.py  test_excess_blob_gas.py  test_excess_blob_gas_fork_transition.py  test_point_evaluation_precompile.py  test_point_evaluation_precompile_gas.py
tests/cancun/eip5656_mcopy/: test_mcopy.py  test_mcopy_contexts.py  test_mcopy_memory_expansion.py
tests/cancun/eip6780_selfdestruct/: conftest.py  test_dynamic_create2_selfdestruct_collision.py  test_reentrancy_selfdestruct_revert.py  test_selfdestruct.py  test_selfdestruct_revert.py
tests/cancun/eip7516_blobgasfee/: test_blobgasfee_opcode.py
tests/constantinople/eip1014_create2/: spec.py  test_create_returndata.py  test_recreate.py
tests/constantinople/eip145_bitwise_shift/: spec.py  test_shift_combinations.py
tests/evm_tools/: test_count_opcodes.py
tests/frontier/create/: test_create_deposit_oog.py  test_create_one_byte.py  test_create_suicide_during_init.py  test_create_suicide_store.py
tests/frontier/examples/: test_block_intermediate_state.py
tests/frontier/identity_precompile/: common.py  test_identity.py  test_identity_returndatasize.py
tests/frontier/opcodes/: test_all_opcodes.py  test_blockhash.py  test_call.py  test_calldatacopy.py  (+9 more)
tests/json_infra/: __init__.py  conftest.py  hardfork.py  stash_keys.py  test_blockchain_tests.py  test_ethash.py  test_ethash_general.py  test_genesis.py  test_optimized_state.py  test_rlp.py  test_state_tests.py  test_tools.py  test_tools_new_fork.py  test_trace.py  test_transaction.py  test_trie.py
tests/london/: __init__.py
(+592 files in other folders)
